syntax = "proto3";

package api.base.exception;

import "errors/errors.proto";

// 多语言特定包名，用于源代码引用
option go_package = "github.com/ikaiguang/go-srv-kit/api/base/exception;exception";
option java_multiple_files = true;
option java_package = "api.base.exception";

// Error
enum Error {
  option (errors.default_code) = 500;

  UNKNOWN = 0 [(errors.code) = 404];
  CONTENT_MISSING = 1 [(errors.code) = 400];
  CONTENT_ERROR = 2 [(errors.code) = 400];
}