syntax = "proto3";

package kit.api.pingv1;

// 多语言特定包名，用于源代码引用
option go_package = "github.com/ikaiguang/go-srv-kit/api/ping/v1/resources;pingv1";
option java_multiple_files = true;
option java_package = "kit.api.pingv1";
option java_outer_classname = "KitApiPingV1";

// PingReq ping请求
//
// ping请求
message PingReq {
  // 请求消息
  string message = 1;
}

// PingResp ping响应
//
// ping响应
message PingResp {
  // 响应消息
  string message = 1;
}