syntax = "proto3";

package kit.app.apppkg;

option go_package = "github.com/ikaiguang/go-srv-kit/kratos/app;apppkg";
option java_multiple_files = true;
option java_package = "kit.app.apppkg";
option java_outer_classname = "KitAppAppPkg";

import "google/protobuf/any.proto";

// RuntimeEnvEnum app运行环境
message RuntimeEnvEnum {
  enum RuntimeEnv {
    // UNKNOWN 未知
    UNKNOWN = 0;
    // LOCAL 本地开发
    LOCAL = 10;
    // DEVELOP 开发环境
    DEVELOP = 20;
    // TESTING 测试环境
    TESTING = 30;
    // UAT User Acceptance Test
    UAT = 40;
    // PREVIEW 预发布 环境
    PREVIEW = 50;
    // PRODUCTION 生产环境
    PRODUCTION = 60;
  }
}

// Response 响应
message Response {
  int32 code = 1;
  string reason = 2;
  string message = 3;
  string requestId = 4;

  google.protobuf.Any data = 5;
  map<string, string> metadata = 6;
};

// ResponseData data
message ResponseData {string data = 1;}